added application properties and exposed all actuator endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+info.app.main=Spring Boot Actuator Demo
+info.app.description=Demo app using spring boot, actuator, and devtools
+info.app.version=1.0.0
 
+# Use * to expose add enpoints
+# Can expose individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.include=*
