added commented out line to exclude health and info endpoints, test only

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ info.app.version=1.0.0
 # Use * to expose add enpoints
 # Can expose individual endpoints with a comma-delimited list
 management.endpoints.web.exposure.include=*
+
+# Can exclude individual endpoints with a comma-delimited list
+# management.endpoints.web.exposure.exclude=health,info
