define custom properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ management.endpoints.web.exposure.include=*
 
 # Can exclude individual endpoints with a comma-delimited list
 # management.endpoints.web.exposure.exclude=health,info
+
+# Define custom properties
+leader.name=Karol Capel
+guild.name=Brave Vesperia
