changed server port from default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ management.endpoints.web.exposure.include=*
 # Define custom properties
 leader.name=Karol Capel
 guild.name=Brave Vesperia
+
+#Change default(8080) Spring Boot embedded server port
+server.port=7070
