--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ guild.name=Brave Vesperia
 
 #Change default(8080) Spring Boot embedded server port
 server.port=7070
+
+#Set application context path
+server.servlet.context-path=/springbootapp
